--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -14,8 +14,9 @@ services:
     image: manikandan305/kafka
     ports:
       - "9092:9092"
-    links:
+    depends_on:
       - zookeeper
     command: kafka-server-start.sh config/server.properties
     volumes:
       - ./config/server.properties:/config/server.properties
+      # - /var/run/docker.sock:/var/run/docker.sock
