--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -19,4 +19,4 @@ services:
     command: kafka-server-start.sh config/server.properties
     volumes:
       - ./config/server.properties:/config/server.properties
-      # - /var/run/docker.sock:/var/run/docker.sock
+      - /var/run/docker.sock:/var/run/docker.sock
